fix LL_DELETE2 for VS2008 per Gregory Davydouski

--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -3,6 +3,10 @@ uthash ChangeLog
 
 Click to return to the link:index.html[uthash home page].
 
+Version 1.9.8.p2 
+----------------
+* fix LL_DELETE2 for VS2008 (thanks, Greg Davydouski!)
+
 Version 1.9.8.p1 
 ----------------
 * fix missing argument in `HASH_REPLACE_STR` (thanks, Alex!)
