--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -3,9 +3,10 @@ uthash ChangeLog
 
 Click to return to the link:index.html[uthash home page].
 
-Version 1.9.9.1 (2014-03-25)
+Version 1.9.9.1 (2014-00-00)
 --------------------------
 * fix utstring pointer math on >4GB strings (thanks, Thomas Bottesch!)
+* change FNV hash to FNV-1a varation (thanks, dwest1975!)
 
 Version 1.9.9 (2014-02-25)
 --------------------------
