--- a/opt/bundle/tests/README
+++ b/opt/bundle/tests/README
@@ -5,3 +5,5 @@ test4: test utvector_copy
 test5: test utvector of utstring
 test6: test utvector of utstring more ops
 test7: test utvector of utstring even more ops
+test8: test utextend past initial size int
+test9: test utextend past initial size utstring
