--- a/opt/README
+++ b/opt/README
@@ -10,4 +10,12 @@ The other benefit of using the bundle is that if you do a "make" in bundle/
 it builds bundle/src/libut.a, which you can then link into your program 
 using LDFLAGS -Lbundle/src -lut. This makes the utvector available. 
 
-This also links in the plumbing that allows making a utvector of utstrings.
+This also links in the plumbing that supports having a utvector of utstrings.
+
+-------------------------------------------------------------------------------
+
+NOTE: because the bundle/include contains symlinks, to copy this source into
+      another source tree, make sure you deref symlinks to copy their contents.
+      One way to do this, is to use the tar -h option:
+
+ tar cjhf - bundle | (cd $DESTDIR; tar xjf -)
