--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -3,8 +3,11 @@ uthash ChangeLog
 
 Click to return to the link:index.html[uthash home page].
 
-Version 1.9.9.1 (2014-00-00)
+NOTE: uthash is no longer maintained as of 2015.
+
+Version 1.9.9.1 (2014-11-18)
 --------------------------
+* inclusion of experimental libut bundle with utvector in opt/
 * use shift in Bernstein hash instead of multiply (thanks, Jimmy Zhuo!)
 * switch ssize_t types in utarray/utstring to size_t (thanks, Hong Xu!)
 * fix utstring pointer math on >4GB strings (thanks, Thomas Bottesch!)
