[ADD] add CDL_APPEND_END

--- a/tests/README
+++ b/tests/README
@@ -86,6 +86,7 @@ test81: test utarray_insert past end of array
 test82: test utarray_inserta past end of array
 test83: test HASH_REPLACE_STR with char[] key
 test84: test HASH_REPLACE_STR with char* key
+test85: CDL_APPEND_END
 
 
 Other Make targets
