--- a/opt/README
+++ b/opt/README
@@ -1,21 +1,21 @@
-The "bundle" directory is an alternative way to use uthash, utarray, utlist, 
-utstring and utvector in your programs. You can copy the bundle directory
-entirely into your own source tree, then use CFLAGS to add bundle/include
+The "libut" directory is an alternative way to use uthash, utarray, utlist, 
+utstring and utvector in your programs. You can copy the libut directory
+entirely into your own source tree, then use CFLAGS to add libut/include
 to your include-header search path (-I). 
 
 There are two upshots of this. One is that you can just #include "libut.h"
 instead of uthash.h, utarray.h, etc. So it is a convenient wrapper. 
 
-The other benefit of using the bundle is that if you do a "make" in bundle/
-it builds bundle/src/libut.a, which you can then link into your program 
-using LDFLAGS -Lbundle/src -lut. This makes the utvector available. 
+The other benefit of using the libut is that if you do a "make" in libut/
+it builds libut/src/libut.a, which you can then link into your program 
+using LDFLAGS -Llibut/src -lut. This makes the utvector available. 
 
 This also links in the plumbing that supports having a utvector of utstrings.
 
 -------------------------------------------------------------------------------
 
-NOTE: because the bundle/include contains symlinks, to copy this source into
+NOTE: because the libut/include contains symlinks, to copy this source into
       another source tree, make sure you deref symlinks to copy their contents.
       One way to do this, is to use the tar -h option:
 
- tar cjhf - bundle | (cd $DESTDIR; tar xjf -)
+ tar cjhf - libut | (cd $DESTDIR; tar xjf -)
