Test case for LL_PREPEND_ELEM, which fails in VS2008 mode.
This is a formal test case for issue #89.
The lack of curly braces around the if/else bodies is intentional,
just to test the exact code that's in tinydtls. That is, if the expansions
of LL_PREPEND_ELEM and LL_APPEND ever lost their do-while-(0) forms,
tinydtls would break; so this tests exactly that case.

--- a/tests/README
+++ b/tests/README
@@ -90,6 +90,7 @@ test85: test HASH_OVERHEAD on null and non null hash
 test86: test *_APPEND_ELEM / *_PREPEND_ELEM (Thilo Schulz)
 test87: test HASH_ADD_INORDER() macro (Thilo Schulz)
 test88: test alt memcmp and strlen macros
+test89: test code from the tinydtls project
 
 Other Make targets
 ================================================================================
