Rename uthash_memcmp to HASH_KEYCMP, step 2.
Well, this certainly fell by the wayside! Back in December 2018
(two years ago), I did the first part (introducing `HASH_KEYCMP`),
cut release version 2.1.0, and said we should immediately fix up
the tests and then let it bake for "a few months" before removing
all support for `alt_memcmp`. It turns out that I forgot to do
any of that. So now I've fixed up the tests, just in time to
cut release version 2.2.0.

Then we can let version 2.2.0 bake for "a few months" (read: maybe
a couple of years :)) before finally removing `alt_memcmp`.

test96.c now demonstrates the intended usage of HASH_FUNCTION
and HASH_KEYCMP as a matching pair. (This is similar to the
pair of template parameters `Hasher, KeyEqual` taken by C++'s
`unordered_set`; the difference is that we take `KeyNotEqual`,
so that you can pass in a strcmp-like trivalued comparator --
but you don't have to, and test96.c regression-tests
that passing in a plain old not-equal function works fine.

Fixes #157.

--- a/tests/README
+++ b/tests/README
@@ -7,7 +7,7 @@ test2:  make 10-item hash, lookup items with even keys, print
 test3:  make 10-item hash, delete items with even keys, print others
 test4:  10 structs have dual hash handles, separate keys
 test5:  10 structs have dual hash handles, lookup evens by alt key
-test6:  test alt malloc macros (and alt memcmp macro)
+test6:  test alt malloc macros (and alt key-comparison macro)
 test7:  test alt malloc macros with 1000 structs so bucket expansion occurs
 test8:  test num_items counter in UT_hash_handle
 test9:  test "find" after bucket expansion
@@ -89,7 +89,7 @@ test84: test HASH_REPLACE_STR with char* key
 test85: test HASH_OVERHEAD on null and non null hash
 test86: test *_APPEND_ELEM / *_PREPEND_ELEM (Thilo Schulz)
 test87: test HASH_ADD_INORDER() macro (Thilo Schulz)
-test88: test alt memcmp and strlen macros
+test88: test alt key-comparison and strlen macros
 test89: test code from the tinydtls project
 test90: regression-test HASH_ADD_KEYPTR_INORDER (IronBug)
 test91: test LL_INSERT_INORDER etc.
@@ -97,6 +97,7 @@ test92: HASH_NONFATAL_OOM
 test93: alt_fatal
 test94: utlist with fields named other than 'next' and 'prev'
 test95: utstack
+test96: HASH_FUNCTION + HASH_KEYCMP
 
 Other Make targets
 ================================================================================
