--- a/tests/README
+++ b/tests/README
@@ -98,6 +98,7 @@ test93: alt_fatal
 test94: utlist with fields named other than 'next' and 'prev'
 test95: utstack
 test96: HASH_FUNCTION + HASH_KEYCMP
+test97: DL_SORT static-analysis false positive (#241)
 
 Other Make targets
 ================================================================================
